@startuml
class deck.Deck {
- String name
- int deckSize
- Card[] deckList
+ <<Create>> Deck(String,Card[])
+ int insertCard(Card)
+ Card removeCard(int)
+ String toString()
+ Card[] getDeckList()
+ String getName()
+ int getDeckSize()
+ void setDeckSize(int)
}


class card.type.NormalUnitCard {
+ <<Create>> NormalUnitCard(String,String,int,int,int)
+ int attackUnit(UnitCard)
}

abstract class card.base.SpellCard {
- boolean isBurstSpeed
+ <<Create>> SpellCard(String,String,int,boolean)
+ {abstract}void castSpell(UnitCard)
+ String toString()
+ boolean isBurstSpeed()
+ void setBurstSpeed(boolean)
}


class card.type.LeaderUnitCard {
- int buffPower
- int buffHealth
+ <<Create>> LeaderUnitCard(String,String,int,int,int,int,int)
+ int attackUnit(UnitCard)
+ void buffUnit(UnitCard[])
+ int getBuffPower()
+ void setBuffPower(int)
+ int getBuffHealth()
+ void setBuffHealth(int)
+ String toString()
}


class card.type.DebuffUnitCard {
- int debuffPower
+ <<Create>> DebuffUnitCard(String,String,int,int,int,int)
+ int attackUnit(UnitCard)
+ int getDebuffPower()
+ void setDebuffPower(int)
}


class card.type.BuffSpellCard {
- int powerIncrease
+ <<Create>> BuffSpellCard(String,String,int,boolean,int)
+ void castSpell(UnitCard)
+ int getPowerIncrease()
+ void setPowerIncrease(int)
}


class card.type.VenomUnitCard {
+ <<Create>> VenomUnitCard(String,String,int,int,int)
+ int attackUnit(UnitCard)
+ int dead(Player)
}

abstract class card.base.UnitCard {
- int power
- int health
+ <<Create>> UnitCard(String,String,int,int,int)
+ {abstract}int attackUnit(UnitCard)
+ int attackPlayer(Player)
+ String toString()
+ int getPower()
+ int getHealth()
+ void setPower(int)
+ void setHealth(int)
}


class card.type.DamageSpellCard {
- int damage
+ <<Create>> DamageSpellCard(String,String,int,boolean,int)
+ void castSpell(UnitCard)
+ int getDamage()
+ void setDamage(int)
}


abstract class card.base.Card {
- String name
- int bloodCost
- String flavorText
+ <<Create>> Card(String,String,int)
+ {abstract}String toString()
+ String getName()
+ int getBloodCost()
+ String getFlavorText()
+ boolean equals(UnitCard)
+ Object clone()
}




card.base.UnitCard <|-- card.type.NormalUnitCard
card.base.Card <|-- card.base.SpellCard
card.base.UnitCard <|-- card.type.LeaderUnitCard
card.base.UnitCard <|-- card.type.DebuffUnitCard
card.base.SpellCard <|-- card.type.BuffSpellCard
card.base.UnitCard <|-- card.type.VenomUnitCard
card.base.Card <|-- card.base.UnitCard
card.base.SpellCard <|-- card.type.DamageSpellCard
card.base.Cloneable <|.. card.base.Card
@enduml